# ChangeLog for sys-kernel/linux-headers
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux-headers/ChangeLog,v 1.287 2009/05/09 22:02:40 vapier Exp $

*linux-headers-2.6.29 (09 May 2009)

  09 May 2009; Mike Frysinger <vapier@gentoo.org>
  +linux-headers-2.6.29.ebuild:
  Version bump.

  09 May 2009; Mike Frysinger <vapier@gentoo.org>
  linux-headers-2.6.27-r2.ebuild, linux-headers-2.6.28-r1.ebuild:
  Fix by Andrei Slavoiu for drm header install with cross builds #267145.

  16 Feb 2009; Mike Frysinger <vapier@gentoo.org>
  linux-headers-2.6.28-r1.ebuild:
  Remove mips/sh KEYWORDS as this version has broken bi-endian handling.

  23 Jan 2009; Raúl Porcel <armin76@gentoo.org>
  linux-headers-2.6.27-r2.ebuild:
  alpha/ia64 stable wrt #252645

  09 Jan 2009; Joseph Jezak <josejx@gentoo.org>
  linux-headers-2.6.27-r2.ebuild:
  Marked ppc/ppc64 for bug #262645.

  08 Jan 2009; Jeroen Roovers <jer@gentoo.org>
  linux-headers-2.6.27-r2.ebuild:
  Stable for HPPA (bug #252645).

  04 Jan 2009; Markus Meier <maekke@gentoo.org>
  linux-headers-2.6.27-r2.ebuild:
  amd64/x86 stable, bug #252645

  30 Dec 2008; Friedrich Oslage <bluebird@gentoo.org>
  linux-headers-2.6.27-r2.ebuild:
  Stable on sparc, bug #252645

*linux-headers-2.6.28-r1 (29 Dec 2008)

  29 Dec 2008; Mike Frysinger <vapier@gentoo.org>
  +linux-headers-2.6.28-r1.ebuild:
  Pull in linux/types.h in linux/serial.h #252721.

  27 Dec 2008; Friedrich Oslage <bluebird@gentoo.org>
  linux-headers-2.6.28.ebuild:
  Mark -sparc because we can't compile sys-libs/glibc with this one.
  http://lkml.org/lkml/2008/12/16/60

*linux-headers-2.6.28 (27 Dec 2008)

  27 Dec 2008; Mike Frysinger <vapier@gentoo.org>
  +linux-headers-2.6.28.ebuild:
  Version bump.

  02 Nov 2008; Mike Frysinger <vapier@gentoo.org>
  linux-headers-2.6.27-r2.ebuild:
  Workaround sparc64 install error #244640 by Lee Chen.

*linux-headers-2.6.27-r2 (27 Oct 2008)
