@@ -7,8 +7,8 @@ DIST gentoo-headers-base-2.6.27.tar.lzma 3584132 RMD160 824b540cfa897b6b63a22bc3
 DIST gentoo-headers-base-2.6.28.tar.lzma 3698033 RMD160 d37901dff6334482b582d843a4d293ce99d6d64c SHA1 1a12e7c2b71091f90c6af46f70a8393fb399b9cc SHA256 fc1d07a2a37a290589d71b2b48e1c5660b89a958d578d9fb5be8cbcc59fbfcd2
 DIST gentoo-headers-base-2.6.29.tar.lzma 3814923 RMD160 7b70d699c7ebbd0a59ecc27da7087be65de60c68 SHA1 30896450246761f6ee9ed89a16249b7b5b314da4 SHA256 b33b53075afdeb92e3e85d404d9b4d9e55e6665603cd58a0d42e1b3db4d52ab5
 EBUILD linux-headers-2.6.23-r3.ebuild 1040 RMD160 8a90cce5429256596402240c6588d486d62947ea SHA1 5f03e0c2ac763f51e61e807139945de3b3d9edc5 SHA256 761c2bdb6fbc52f9e6f217b6062da9b64bcb4e5c6474195de3d8be5f7af9822c
-EBUILD linux-headers-2.6.27-r2.ebuild 1303 RMD160 cd1a2b9f0be66ef9cc5f5015979e12f89cda8d0d SHA1 275a5413dfe722b515024f97a5dcdc853a162260 SHA256 2037d3b8b334d3a83cdddca166220b05f0ebb6724ec870c22dc37747015dcdb8
-EBUILD linux-headers-2.6.28-r1.ebuild 1380 RMD160 2a7ebd745064757618cf21e82f09a6e8876b8c22 SHA1 3a06b08461a0e6382022476769db340dc9a67304 SHA256 0b53b1eb078eefd5dde5502b913d648baf840d30af0c56cd406894ae74432de8
+EBUILD linux-headers-2.6.27-r2.ebuild 1371 RMD160 601a90e80bf5edfb076e85f6ed459e5af3b69bf0 SHA1 ba6e41622ee0935cfc53f54aefaf90fc1063d27b SHA256 5bb63de7eb9e25cbf92ac44a89136138b828473359da5e99ea2873debcc22cb6
+EBUILD linux-headers-2.6.28-r1.ebuild 1447 RMD160 774ca7cff4fa2a847763db121a5b3f57937c3390 SHA1 a6a1108b545a866618c961a83118c8884de1fd9d SHA256 1365b2f46a8c6d4d65457d48bf8939cf2e9167b7be54f81d7da0fa9ba2c78e73
 EBUILD linux-headers-2.6.29.ebuild 1377 RMD160 31a868bc03a97be28eed0ac37f1e5175e7447329 SHA1 2256b266223f9a2dbc3ad3a556426611b3dbc4a0 SHA256 739c88466667fa2e2f9e8e063af3f94f3c33dfe8d6ec5a63ae3e640af3987ec1
-MISC ChangeLog 49103 RMD160 e3e9498eba174f870d4049bed58982e5a5c0675d SHA1 633404c747487f84cf3acb7d3658729999e55d1c SHA256 6ac5d8a6ca6d879886f87a2d7b614577b37d6aeb4df8336e8c55a06c7d2f086c
+MISC ChangeLog 49291 RMD160 fc0fe2e31856d53d9c5eaecc16f604b793daa2b9 SHA1 a96fb126b45ef674e34ae87ea8f00715e8dd3be7 SHA256 1a3904d810a26383e5221a17fdd2cfebe26bc58d23733cc69108329eac0aaf47
 MISC metadata.xml 162 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 SHA1 d6b4923897f6ae673b4f93646f5b4ba61d5a2c3c SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a
